tcw3/designer/tests/bad/objinit_field_wrong_ty.tcwdl
pub comp crate::Comp1 {
    pub event evt();
}
pub comp crate::Comp2 {
    const comp1 = crate::Comp1::new! {
        // `Comp1::evt` is actually `event`
        evt = 42,
        //~^ ERROR Component `Comp1` does not have a field named `evt`
    };
}
